# ratp_calendrier_travaux

./: README.md  app.py  backend_app.py  pyproject.toml  streamlit_app.py
data/: data.json  event_ligne_Ligne 14 - Fermeture complète_2.ics  event_ligne_Ligne 14 - Fermeture complète_4.ics  event_ligne_Ligne 14 - Fermeture complète_6.ics  event_ligne_Ligne 14 - Fermeture complète_8.ics  event_ligne_Ligne 14 - Fermeture complète_9.ics  event_ligne_Ligne 2 - Travaux entre Père Lachaise et Nation_1.ics  event_ligne_Ligne 3 - Travaux entre Pont de Levallois-Bécon et Wagram_1.ics  event_ligne_Ligne 6 - Fermeture totale de la ligne_6.ics  event_ligne_Ligne 6 - Fermeture totale_6.ics  event_ligne_Ligne 6 - Travaux entre Charles de Gaulle-Etoile et La Motte Picquet-Grenelle_1.ics  event_ligne_Ligne 6 - Travaux entre Charles de Gaulle-Etoile et Trocadéro_4.ics  event_ligne_Ligne 6 - Travaux entre Charles de Gaulle-Etoile et Trocadéro_5.ics  event_ligne_Ligne 6 - Travaux entre Daumesnil et Nation_2.ics  event_ligne_Ligne 9 - Fermeture totale_2.ics  event_ligne_Ligne 9 - Fermeture totale_3.ics  event_ligne_Ligne 9 - Travaux sur toute la ligne_1.ics  event_ligne_Ligne B - Rupture d’interconnexion à Gare du Nord_13.ics  event_ligne_Ligne B - Rupture d’interconnexion à Gare du Nord_14.ics  event_ligne_Ligne B - Rupture d’interconnexion à Gare du Nord_15.ics  event_ligne_Ligne B - Rupture d’interconnexion à Gare du Nord_16.ics  event_ligne_Ligne B - Travaux entre Aulnay-sous-Bois et Aéroport Charles de Gaulle 2-TGV_11.ics  event_ligne_RER A - Travaux entre Maisons-Laffitte et Poissy_7.ics  (+27 more)
(+22 files in other folders)
