[project]
name = "ratp-calendrier-travaux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ics>=0.7.2",
    "ipykernel>=6.29.5",
    "pyautogui>=0.9.54",
    "pyvirtualdisplay>=3.0",
    "requests>=2.32.3",
    "seleniumbase>=4.34.1",
]
